<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_page_background"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/corporateLabel"
        android:layout_width="250dp"
        android:layout_height="34dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="76dp"
        android:layout_marginBottom="6dp"
        android:background="#EFE4B9B9"
        android:fontFamily="@font/amaranth_italic"
        android:text="@string/corporate_name"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textColorHighlight="@android:color/background_light"
        android:textColorHint="@android:color/background_light"
        android:textColorLink="@android:color/black"
        android:textSize="24sp" />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@id/enterpriseLabel"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:alpha="1"
        android:background="#E9C40A1E"
        android:src="@drawable/rapunzel_logo2" />

    <TextView
        android:id="@+id/enterpriseLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="74dp"
        android:fontFamily="@font/paytone_one"
        android:text="@string/enterprise_name"
        android:textColor="#916868"
        android:textColorHighlight="#000000"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/userNameEditText"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="300dp"
        android:autofillHints=""
        android:background="#FFFFFF"
        android:drawableEnd="@drawable/user_name_edit_text_icon"
        android:ems="10"
        android:hint="@string/user_name_place_holder"
        android:inputType="textPersonName"
        android:paddingStart="4dp"
        android:paddingEnd="2dp"
        android:shadowRadius="@android:integer/config_shortAnimTime"
        android:textColorHighlight="#8F8888"
        android:textColorLink="#352C2C"
        android:textCursorDrawable="@android:color/darker_gray"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="340dp"
        android:autofillHints=""
        android:background="#FFFFFF"
        android:drawableEnd="@drawable/password_edit_text_icon"
        android:ems="10"
        android:hint="@string/password_place_holder"
        android:inputType="textPassword"
        android:paddingStart="4dp"
        android:paddingEnd="2dp"
        android:textColorHighlight="#8F8888"
        android:textColorLink="#352C2C"
        android:textCursorDrawable="@android:color/darker_gray"
        android:textSize="20sp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/loginButton"
        android:layout_width="230dp"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="420dp"
        app:cardBackgroundColor="#E2E4B9B9"
        app:cardCornerRadius="14dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/loginButtonLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="@font/alef_bold"
                android:text="@string/login_button_label"
                android:textColor="#000000"
                android:textColorHighlight="@color/cardview_light_background"
                android:textColorLink="@color/cardview_light_background"
                android:textSize="20sp" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/wrongCredentialsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="465dp"
        android:fontFamily="@font/alef_bold"
        android:text="@string/wrong_credentials_warning"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:visibility="invisible" />

</RelativeLayout>